# Meridian

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  strip-barrels.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
docs/: ClaudeAgentSidecar.md  MeetingsRAGScaling.md  PipelineProgress.md  cleanup_and_testing_plan.md  gemini-auth-plan.md  gemini-oauth-implementation.md  github-copilot-implementation.md  triage-panel-structured-extraction.md
scripts/: bitbucket-api-key-test.sh  debug-jira-ticket.sh
src/: App.tsx  index.css
src-sidecar/: package-lock.json  package.json  pnpm-lock.yaml
src-sidecar/src/: agent.ts  ai-capture.ts  checkpointer.ts  gemini.ts  index.ts  protocol.ts
src-tauri/: .taurignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bitbucket.rs  http.rs  jira.rs  lib.rs  main.rs  sidecar.rs
src-tauri/src/agents/: briefing.rs  dispatch.rs  grooming.rs  implementation.rs  meetings.rs  mod.rs  planning.rs  review.rs  tools.rs  trends.rs
src-tauri/src/commands/: bitbucket.rs  claude.rs  claude.rs_header.rs  credentials.rs  fetch_url.rs  grooming_templates.rs  jira.rs  knowledge.rs  meetings.rs  meetings_search.rs  mod.rs  pr_template.rs  preferences.rs  repo.rs  skills.rs  sprint_reports.rs  store_cache.rs  tasks.rs  time_tracking.rs  trend_analyses.rs  validate.rs  workflows.rs
src-tauri/src/commands/meetings/: _shared.rs  diarize.rs  mod.rs  persistence.rs  recording.rs  types.rs  whisper.rs
src-tauri/src/commands/repo/: _shared.rs  diff.rs  exec.rs  files.rs  git.rs  manage.rs  mod.rs  sync.rs  types.rs  validate.rs
src-tauri/src/commands/validate/: _shared.rs  anthropic.rs  bitbucket.rs  copilot.rs  gemini.rs  jira.rs  mod.rs
src-tauri/src/integrations/: ai_traffic.rs  bitbucket.rs  embedding_backfill.rs  jira.rs  mod.rs  sidecar.rs
src-tauri/src/integrations/bitbucket/: client.rs  mod.rs  parsing.rs  types.rs
src-tauri/src/integrations/bitbucket/endpoints/: comments.rs  mod.rs  prs.rs  tasks.rs
src-tauri/src/integrations/jira/: adf.rs  client.rs  mod.rs  parsing.rs  types.rs
src-tauri/src/integrations/jira/endpoints/: fields.rs  issues.rs  mod.rs  sprints.rs
src-tauri/src/llms/: claude.rs  copilot.rs  embeddings.rs  gemini.rs  local_llm.rs  mod.rs
src-tauri/src/storage/: credentials.rs  crypto.rs  knowledge.rs  meeting_index.rs  mod.rs  preferences.rs  store_cache.rs  tasks.rs  time_tracking.rs
src-tauri/tao-patch/: Cargo.toml
src-tauri/tao-patch/src/platform_impl/macos/: app_state.rs
src/__tests__/: smoke.test.ts
src/components/: AiDebugDock.tsx  AiDebugPanel.tsx  BitbucketImage.tsx  ContextProgressRing.tsx  CredentialField.tsx  CrossMeetingsChatPanel.tsx  HeaderModelPicker.tsx  HeaderRecordButton.tsx  HeaderSettingsButton.tsx  HeaderTasksButton.tsx  HeaderTimeTracker.tsx  JiraTicketLink.tsx  MarkdownBlock.tsx  MentionSuggestionList.tsx  MeridianLogo.tsx  OrchestratorPanel.tsx  PipelineProgress.tsx  RemoteImage.tsx  RichFieldEditor.tsx  RichNotesEditor.tsx  ScopeList.tsx  SlashCommandInput.tsx  TasksPanel.tsx  TokenSuggestPopover.tsx  TokenUsageBadge.tsx  ToolRequestCard.tsx  TrendAnalysisPanel.tsx  TrendCharts.tsx  appHeaderLayout.tsx  mentionSuggestionRenderer.ts
src/lib/: aiDebugListener.ts  (+30 more)
(+312 files in other folders)
