[package]
name = "meridian"
version = "0.1.0"
description = "Meridian — Personal productivity desktop app for engineering teams"
authors = []
edition = "2021"

[lib]
name = "meridian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
base64 = "0.22.1"
dirs = "6.0.0"

[patch.crates-io]
tao = { path = "tao-patch" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
